Closed
Bug 883630
Opened 9 years ago
Closed 9 years ago
Assertion failure: hasScript(), at jsfun.h
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla24
People
(Reporter: gkw, Assigned: bhackett1024)
References
Details
(Keywords: assertion, regression, testcase, Whiteboard: [jsbugmon:update])
Attachments
(2 files)
2.18 KB,
text/plain
|
Details | |
9.88 KB,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
a = b = c = d = [] e = f = g = h = i = j = k = a[6] = {} function x() {} v = [] for (var p in this) { Array.prototype.some.call(a, (function() { y = Uint8ClampedArray.z })) } asserts js debug shell on m-c changeset 36da3cb92193 without any CLI arguments at Assertion failure: hasScript(), at jsfun.h autoBisect shows this is probably related to the following changeset: The first bad revision is: changeset: http://hg.mozilla.org/mozilla-central/rev/ce43d28276e4 user: Brian Hackett date: Fri Jun 14 05:58:28 2013 -0600 summary: Bug 678037 - Enable lazy JS parsing and fix various bugs, r=waldo,evilpie,nobody.
Flags: needinfo?(bhackett1024)
Assignee | ||
Comment 1•9 years ago
|
||
When iterating over inlined Ion frames, the callee function may be lazily interpreted. The script will exist, and the function just needs to be repointed to it. This patch also cleans up some metastasis in the methods for getting scripts off functions, and adds a comment on how to use the remaining methods.
Assignee: general → bhackett1024
Attachment #763237 -
Flags: review?(luke)
Flags: needinfo?(bhackett1024)
Assignee | ||
Comment 2•9 years ago
|
||
Pushing ahead of review to hopefully fix bug 883560. https://hg.mozilla.org/integration/mozilla-inbound/rev/91f620586eb8
Comment 3•9 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/91f620586eb8
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
![]() |
||
Comment 4•9 years ago
|
||
Comment on attachment 763237 [details] [diff] [review] patch Review of attachment 763237 [details] [diff] [review]: ----------------------------------------------------------------- ::: js/src/jsfun.h @@ +242,5 @@ > JS_ASSERT(hasScript()); > return u.i.s.script_; > } > > + inline JSScript *getExistingScript(); The usual naming convention is that "getX" means that the operation is fallible. This one isn't, so could you name it "existingScript()"?
Attachment #763237 -
Flags: review?(luke) → review+
![]() |
Reporter | |
Comment 5•9 years ago
|
||
(In reply to Luke Wagner [:luke] from comment #4) > The usual naming convention is that "getX" means that the operation is > fallible. This one isn't, so could you name it "existingScript()"? Setting needinfo so this todo doesn't get lost.
Flags: needinfo?(bhackett1024)
Assignee | ||
Comment 6•9 years ago
|
||
The function was renamed separately.
Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(bhackett1024)
You need to log in
before you can comment on or make changes to this bug.
Description
•