Bug 883630 - Watch for lazy functions when iterating inline Ion frames, clean up methods for accessing function scripts.