js/src/ion/AsmJS.cpp
@@ -5316,7 +5316,10 @@ GenerateEntries(ModuleCompiler &m)
 static inline bool
 TryEnablingIon(JSContext *cx, AsmJSModule::ExitDatum *exitDatum, int32_t argc, Value *argv)
 {
-    JSScript *script = exitDatum->fun->maybeNonLazyScript();
+    if (!exitDatum->fun->hasScript())
+        return true;
+
+    JSScript *script = exitDatum->fun->nonLazyScript();
     if (!script)
         return true;
 
