js/src/jscompartment.cpp
@@ -634,8 +634,8 @@ CreateLazyScriptsForCompartment(JSContext *cx)
         if (obj->compartment() == cx->compartment() && obj->isFunction()) {
             JSFunction *fun = obj->toFunction();
             if (fun->isInterpretedLazy()) {
-                LazyScript *lazy = fun->lazyScript();
-                if (lazy->sourceObject() && !lazy->maybeScript()) {
+                LazyScript *lazy = fun->lazyScriptOrNull();
+                if (lazy && lazy->sourceObject() && !lazy->maybeScript()) {
                     if (!lazyFunctions.append(fun))
                         return false;
                 }
@@ -666,8 +666,11 @@ CreateLazyScriptsForCompartment(JSContext *cx)
         JSObject *obj = i.get<JSObject>();
         if (obj->compartment() == cx->compartment() && obj->isFunction()) {
             JSFunction *fun = obj->toFunction();
-            if (fun->isInterpretedLazy() && fun->lazyScript()->maybeScript())
-                JS_ALWAYS_TRUE(fun->getOrCreateScript(cx));
+            if (fun->isInterpretedLazy()) {
+                LazyScript *lazy = fun->lazyScriptOrNull();
+                if (lazy && lazy->maybeScript())
+                    fun->getExistingScript();
+            }
         }
     }
 
